fix(): scrolling width on mobile for table content

--- a/src/theme/BlogPostPage/BlogPageLayout/BlogPageLayout.css
+++ b/src/theme/BlogPostPage/BlogPageLayout/BlogPageLayout.css
@@ -11,6 +11,10 @@
   gap: 80px;
 }
 
+.blog-page-content {
+  width: 100%;
+}
+
 .blog-page-featured-tag-container {
   margin: 0px 80px 16px 80px;
 }
